syntax = "proto3";
option java_multiple_files = true;
package dev.dl.grpc.user;

service FindUserById {
  rpc findUser (UserId) returns (User) {}
}
message UserId {
  string userId = 1;
}
message User {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
}